[gd_scene load_steps=8 format=3 uid="uid://c610i3b0cpoea"]

[ext_resource type="Script" uid="uid://kb1x1uhpvyfe" path="res://entities/enemies/rapidfire/rapidfire_enemy.gd" id="1_sy5j2"]
[ext_resource type="Texture2D" uid="uid://oa6dsc3xljq4" path="res://assets/sprites/EnemyRapidfire.png" id="2_0fsj8"]
[ext_resource type="Script" uid="uid://etmcnqvw0xu0" path="res://entities/enemies/rapidfire/weapon_manager.gd" id="3_4o1w7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2cccv"]
atlas = ExtResource("2_0fsj8")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sidsk"]
atlas = ExtResource("2_0fsj8")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_tnv3v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2cccv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sidsk")
}],
"loop": true,
"name": &"default",
"speed": 4.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jiepi"]
radius = 17.0
height = 60.0

[node name="RapidFireEnemy" type="CharacterBody2D" groups=["ENEMY"]]
collision_layer = 5
script = ExtResource("1_sy5j2")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(8, 0)
rotation = 1.5708
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_tnv3v")
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(6, -1)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_jiepi")

[node name="WeaponManager" type="Node2D" parent="."]
script = ExtResource("3_4o1w7")

[node name="ShootingPoint" type="Marker2D" parent="WeaponManager"]
position = Vector2(27, 0)

[node name="WeaponCooldown" type="Timer" parent="WeaponManager"]
unique_name_in_owner = true
wait_time = 0.4
autostart = true

[node name="Reload" type="Timer" parent="WeaponManager"]
unique_name_in_owner = true
wait_time = 2.5
one_shot = true

[connection signal="timeout" from="WeaponManager/WeaponCooldown" to="WeaponManager" method="_on_weapon_cooldown_timeout"]
[connection signal="timeout" from="WeaponManager/Reload" to="WeaponManager" method="_on_reload_timeout"]
